# SwiftChannel

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  COMPLETION_REPORT.md  GETTING_STARTED.md  INDEX.md  LICENSE  PROJECT_SUMMARY.md  QUICK_REFERENCE.md  README.md  verify_build.bat  verify_build.sh
cmake/: SwiftChannelConfig.cmake.in  compiler_options.cmake
examples/: CMakeLists.txt
examples/simple_receiver/: main.cpp
examples/simple_sender/: main.cpp
include/swiftchannel/: swiftchannel.hpp
include/swiftchannel/common/: alignment.hpp  error.hpp  types.hpp  version.hpp
include/swiftchannel/receiver/: receiver.hpp
include/swiftchannel/sender/: channel.hpp  config.hpp  message.hpp  ring_buffer.hpp  sender.hpp
src/diagnostics/: stats.cpp  stats.hpp
src/ipc/: handshake.cpp  handshake.hpp  shared_memory.cpp  shared_memory.hpp
src/platform/posix/: platform_posix.hpp  shm_posix.cpp  socket_posix.cpp
src/platform/windows/: pipe_win.cpp  platform_win.hpp  shm_win.cpp
src/receiver/: dispatch.cpp  receiver.cpp  receiver_impl.hpp
src/sender/: channel_impl.cpp
tests/: CMakeLists.txt
tests/integration/: sender_receiver_test.cpp
tests/unit/: message_test.cpp  ring_buffer_test.cpp
tools/ipc_inspector/: main.cpp
